# forge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: on-python-saved.sh  on-script-created.sh
.claude/skills/scripts-index/: skill.md
_dev/: PROGRESS.md
docs/plans/: 2026-03-08-python-hooks-design.md  2026-03-08-python-hooks.md
docs/sbcl/: SBCL 2.6.2 User Manual.html
docs/sphinx/: conf.py  index.rst
docs/sphinx/tooling/: index.rst  scripts_index.rst
scripts/: scripts.db
src/tooling/: scripts_index.py
